--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "author": "Sofia Wong",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "npm": "^5.7.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sofiawong/SL_Node_Mongo_Express.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/sofiawong/SL_Node_Mongo_Express/issues"
+  },
+  "homepage": "https://github.com/sofiawong/SL_Node_Mongo_Express#readme"
 }
